# Aethel

./: .gitignore  .gitmodules  CMakeLists.txt
.github/: README.md
include/: BaseState.h
include/objects/: ActionBar.h
include/objects/actions/: ActionAddon.h  ActionClock.h  ActionTest.h
include/objects/debug/: DebugInfo.h  FPSCounter.h
include/states/: MainMenuState.h
include/system/: AudioManager.h  CrashHandler.h  InputQueue.h  Logger.h  Renderer2D.h  TextRenderer.h  Variables.h
include/utils/: InfoStackManager.h  Utils.h
src/: main.cpp
src/objects/: ActionBar.cpp
src/objects/actions/: ActionAddon.cpp  ActionClock.cpp  ActionTest.cpp
src/objects/debug/: DebugInfo.cpp  FPSCounter.cpp
src/states/: MainMenuState.cpp
src/system/: AudioManager.cpp  CrashHandler.cpp  Logger.cpp  Renderer2D.cpp  TextRenderer.cpp
src/utils/: Utils.cpp
tools/: build.bat  configure.bat
